--- a/src/pages/Lesson/components/Editor/components/CodeBlock/CodeBlock.css
+++ b/src/pages/Lesson/components/Editor/components/CodeBlock/CodeBlock.css
@@ -431,6 +431,8 @@
     background: rgba(255, 255, 255, 0.1);
     border-radius: 3px;
     margin: 0 1px;
+    vertical-align: baseline;
+    overflow: hidden;
 }
 
 .inline-editable-input {
@@ -442,26 +444,34 @@
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
-    padding: 1px 3px;
+    padding: 2px 4px;
     position: relative;
     z-index: 2;
-    white-space: pre;
-    min-width: 3ch;
-    max-width: 50ch;
+    white-space: nowrap;
+    min-width: 4ch;
+    max-width: 30ch;
+    vertical-align: baseline;
+    height: auto;
+    box-sizing: border-box;
 }
 
 .inline-syntax-highlight {
     position: absolute;
     top: 0;
     left: 0;
-    padding: 1px 3px;
+    padding: 2px 4px;
     pointer-events: none;
-    white-space: pre;
+    white-space: nowrap;
     color: var(--white);
     z-index: 1;
     font-family: inherit;
     font-size: inherit;
     line-height: inherit;
+    vertical-align: baseline;
+    overflow: hidden;
+    box-sizing: border-box;
+    width: 100%;
+    height: 100%;
 }
 
 /* Legacy inline editable styles (for backward compatibility) */
